--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
     "classnames": "^2.2.6",
     "js-cookie": "^2.2.0",
     "react": "^16.6.0",
+    "react-cookie": "^3.0.4",
+    "react-cookies": "^0.1.0",
     "react-dom": "^16.6.0",
     "react-scripts": "2.0.5",
     "react-select": "^2.1.1",
